Make DOJO solve exercises button 100% on small width

--- a/scss/exercises.module.scss
+++ b/scss/exercises.module.scss
@@ -3,3 +3,9 @@
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 2em;
 }
+
+.exerciseList__solveExercisesButtonContainer {
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+}
